--- a/EllieCustom.theme.css
+++ b/EllieCustom.theme.css
@@ -27,17 +27,12 @@
 }
 
 
-/* Dorion Topbar */
-#dorion_topbar {
-background-color: rgba(0,0,0,0.7);
-border-radius:20px;
-}
-/* Set Background*/
+/* Set Background*/	
 body {
 	background-color: transparent;
 }
-.appMount_fae9dd {
-	background: var(--background) !important;
+.appMount_c99875 {
+	background-image: var(--background) !important;
 	background-repeat: no-repeat !important;
 	background-position: center !important;
 	background-size: cover !important;
@@ -45,132 +40,137 @@ body {
 }
 /* Blur */
 .layers_a23c37 {
-margin: calc(var(--app-margin)/2) var(--app-margin) var(--app-margin) var(--app-margin);
-border-radius: var(--app-radius); 
-z-index: 1;
-backdrop-filter: blur(var(--app-blur)) !important;
+	margin: calc(var(--app-margin)/2) var(--app-margin) var(--app-margin) var(--app-margin);
+	border-radius: var(--app-radius); 
+	z-index: 1;
+	backdrop-filter: blur(var(--app-blur)) !important;
 }
 /* Text Selection Color */
 ::selection {
-  background: rgba(var(--accent-rgb), 0.45);
-  color: var(--accent-text-color);
+	background: rgba(var(--accent-rgb), 0.45);
+	color: var(--accent-text-color);
 }
 /* Main Window Size */
 .container__037ed {
-  width: var(--main-width);
-  height: var(--main-height);
+	width: var(--main-width);
+	height: var(--main-height);
 }
 /* Messages avatar shape */
 .avatar__08316 {
-border-radius:20%;
+	border-radius:20%;
 }
 /* Add message background */
 .wrapper__09ecc {
-margin-left: 68px;
-margin-right: 16px;
-background-color: var(--message-color) !important;
-border-radius: calc(var(--app-radius)/2);
+	margin-left: 68px;
+	margin-right: 16px;
+	background-color: var(--message-color) !important;
+	border-radius: calc(var(--app-radius)/2);
 }
 /* Remove circle mask overlay thing */
 foreignObject[mask*="url(#"]{
 	mask: none;
 }
 .wrapperSimple_a34580 {
-border-radius: 0;
+	border-radius: 0;
 }
 /* Friends avatar shape */
 .avatar__991e2 {
-border-radius: var(--radius);
+	border-radius: var(--radius);
 }
 /* Guilds List */
 /* Folder icon shape */
-.folderIconWrapper_72239 {
-background-color: rgba(0,0,0,0);
+.expandedFolderBackground_b1385f.collapsed__98ad5 {
+	background-color: rgba(0,0,0,0);
 }
-.icon__0cbed {
-border-radius: var(--radius);
+div[class="folder__17546"] > div[style^="background-color: rgba(88, 101, 242, 0.4);"] {
+	border-radius: var(--radius);
+	background-color: rgba(var(--accent-rgb), 0.25) !important;
 }
-.expandedFolderBackground__1bec6 {
-width: 56px;
-left: 8px;
-bottom: 2px;
-border-radius: var(--app-radius);
+div[class="folder__17546 hover__043de"] > div[style^="background-color: rgba(88, 101, 242, 0.4);"] {
+	border-radius: var(--radius);
+	background-color: rgba(var(--accent-rgb), 0.25) !important;
 }
-/* Remove the unread pill */
-.wrapper__3670f {
-display: none;
+
+.expandedFolderBackground_b1385f {
+	width: 56px;
+	left: 8px;
+	bottom: 2px;
+	border-radius: var(--app-radius);
 }
+/* Remove the unread pill - commented out for now
+.wrapper_b4903b {
+	display: none;
+}
+*/
 /* Folder icon background fix */
 .folder__17546 {
-background-color: transparent;
+	background-color: transparent;
 }
-/* DMs button shape */
-.childWrapper__01b9c {
-border-radius: var(--radius);
+/* Guilds icon shape */
+.svg__34dd4, .wrapper__9916c {
+	border-radius: var(--radius);
 }
 /* Mention Styles */
-/* Remove the bar and yellow background */
-.mentioned__58017, .mentioned__58017:before {
-background-color: transparent;
+/* Change the style for cool outline */
+.mentioned_fa6fd2 {
+	border-radius: var(--app-radius);
+	background: transparent;
+	border: none;
+	outline: 2px solid rgba(var(--accent-rgb), 1);
+	outline-offset: -1px;
+	box-shadow: 0 0 var(--shadow-width) rgba(var(--accent-rgb), 1);
+&:before {
+	background: transparent;
 }
-.mentioned__58017:hover {
-background-color: transparent;
+&:hover {
+	background: transparent;
 }
-.message__80c10.mentioned__58017.selected_fd9051,
-.mouse-mode.full-motion .mentioned__58017:hover {
-background-color: transparent;
+.message__80c10.mentioned_fa6fd2.selected_fd9051,
+.mouse-mode.full-motion .mentioned_fa6fd2:hover {
+	background: transparent;
 }
 /* @mention text */
 .markup_a7e664 .wrapper_f46140 {
-color: rgb(var(--accent-rgb));
-}
-/* Add the cool outline thingy */
-.mentioned__58017 {
-border: none;
-outline: 2px solid rgba(var(--accent-rgb), 1);
-outline-offset: -1px;
-box-shadow: 0 0 var(--shadow-width) rgba(var(--accent-rgb), 1);
+	color: rgb(var(--accent-rgb));
 }
 /* User list*/
 .container_b2ce9c {
-  background-color: transparent;
+	background-color: transparent;
 }
 .members__9f47b, .members__9f47b > div {
-  background-color: transparent;
+	background-color: transparent;
 }
 .member_aa4760 {
-  background-color: transparent;
+	background-color: transparent;
 }
 /* Text area Styles */
 .channelTextArea__56a36,
 .wrapper_fbbb73 {
   --textarea-alpha: 0.1;
-  margin: 12px 0 12px 0;
-  background: rgba(255,255,255,0.1);
-  border-radius: 22px;
+	margin: 12px 0 12px 0;
+	background: rgba(255,255,255,0.1);
+	border-radius: 22px;
 }
 .channelTextArea__56a36 .scrollableContainer__33e06,
 .wrapper_fbbb73 .scrollableContainer__33e06 {
-  background-color: transparent;
+	background-color: transparent;
 }
 .container_dbadf5 {
-margin-left: var(--chat-margin-left);
+	margin-left: var(--chat-margin-left);
 }
 .wrapper__09ecc {
-margin-left: var(--chatbox-margin-left);
+	margin-left: var(--chatbox-margin-left);
 }
 .cozy_f5c119 .contents_f41bb2 {
-margin-left: var(--chat-margin-left);
+	margin-left: var(--chat-margin-left);
 }
 /* DM List Corners */
 .sidebar_ded4b5 {
-border-radius: var(--app-radius);
+	border-radius: var(--app-radius);
 }
 /* Remove Textbar buttons */
-button[aria-label="Send a gift"] {
-    display: none;}
-button[aria-label="Open sticker picker"] {
-    display: none;}
+button[aria-label="Send a gift"] {display: none;}
+button[aria-label="Open sticker picker"] {display: none;}
 
 /* Remove Nitro Stuff in Settings */
 div[aria-label="User Settings"] > div[aria-label="Gift Inventory"] + div[class^="item_"] + div[class^="separator"] { display: none; }
@@ -186,35 +186,35 @@ a[data-list-item-id$="___nitro"] { display: none; }
 a[data-list-item-id$="___shop"] { display: none; }
 /* Speaking circle shape */
 .avatarSpeaking__61fb1 {
-border-radius: var(--app-radius);
+	border-radius: var(--app-radius);
 }
 /* Fix the bottom 2 buttons */
 .circleIconButton_d8df29.selected__5250e, .circleIconButton_d8df29 {
-border-radius: var(--app-radius);
+	border-radius: var(--app-radius);
 }
 /* Profile Card Background */
 .fieldList_aab0de {
-background-color: var(--background-primary);
+	background-color: var(--background-primary);
 }
 .accountProfileCard__22589 {
-background-color: var(--background-secondary);
+	background-color: var(--background-secondary);
 }
 /* VC pfps shape */
 .userAvatar_c4f005 {
-border-radius: 20%;
+	border-radius: 20%;
 }
 /* Change color of dms button */
 .wrapper_d281dd[aria-label='Direct Messages'] {
-background-color:var(--background-secondary);
-border-radius: var(--radius);
+	background-color:var(--background-secondary);
+	border-radius: var(--radius);
 }
 /* Change color of folders */
 .closedFolderIconWrapper__7321f {
-background-color: rgba(var(--accent-rgb), 0.5);
-border-radius: var(--radius);
+	background-color: rgba(var(--accent-rgb), 0.5);
+	border-radius: var(--radius);
 }
 .expandedFolderIconWrapper__458cf {
-background-color: rgba(var(--accent-rgb), 0.5);
+	background-color: rgba(var(--accent-rgb), 0.5);
 }
 .folder__17546[aria-expanded="true"] {
     .expandedFolderIconWrapper__458cf {
@@ -223,5 +223,5 @@ background-color: rgba(var(--accent-rgb), 0.5);
 }
 /* change color of folder icon */
 path {
-color: rgba(var(--accent-rgb), 1)
+	color: rgba(var(--accent-rgb), 1)
 }
